--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -57,3 +57,34 @@
 .borderunderline{
     display: inline;
 }
+.results{
+    background-color: #31F408;
+    position: absolute;
+    top: 90px;
+    width: 210px;
+    border-radius: 5px;
+    height: fit-content;
+}
+.containerResults{
+    width: 95%;
+    height: fit-content;
+    border-radius: 5px;
+    position: relative;
+    margin-top: 5px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    background-color: #7CF706;
+}
+.infoResult{
+    font-family: 'Technology';
+    font-size: 30px;
+    margin: 0 10px 5px;
+    cursor: pointer;
+    display: block;
+    color: black;
+    text-decoration: none;
+}
+.infoResult:hover{
+    color: white;
+}
